# DaneJoeLibrary

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: DaneJoeConfig.cmake.in
document/: CI_GUIDE.md  LOCAL_DEV_WORKFLOW.md
scripts/: sync_subrepos.py  sync_subrepos.sh
